[gd_scene load_steps=8 format=2]

[ext_resource path="res://logo.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0.890196, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/Fonts/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 4 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 168.0
color = Color( 0.486275, 0.898039, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = -50.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = -150.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play Game!"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="logo" type="Sprite" parent="."]
position = Vector2( 512, 171 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
